fixed mobile layout issue

--- a/css/component.css
+++ b/css/component.css
@@ -476,3 +476,36 @@ section.bl-expand .bl-icon-close {
 	width: 683px;
 	height: 683px;
 }
+
+@media only screen and (max-device-width: 480px) {
+
+
+.bl-box {
+	width: 250px;
+	height: 250px;
+	position: absolute;
+    top: -3%;
+    left: -20%;
+	cursor: pointer;
+	opacity: 1;
+}
+
+
+.profile{
+  margin-right: 25px;
+  margin-bottom: 10px;
+  display: block;
+  width: 150px;
+  height: 150px;
+  float: left;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);  
+}
+
+}
